Wed Nov  7 17:15:07 EET 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_log_set_debug_string function to set a regex
	  string to match for debug output.  Only the function names,
	  or filenames matching the given debug string is actually
	  printed.  This way it is possible to filter out those debug
	  strings that user is not interested in.

	  Fixed a bug in silc_string_regexify.

	  Affected files lib/silcutil/silclog.[ch], and
	  lib/silcutil/unix/silcunixutil.c.

	* Changed the -d options in both server and Irssi SILC client
	  to take the debug string as argument.  Affected files
	  silcd/silcd.c and irssi/src/silc/core/silc-core.c.

Tue Nov  6 21:31:54 EET 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_hash_babbleprint to create a Bubble Babble
	  Encoded fingerprint.  The encoding is developed by Antti
	  Huima (draft-huima-babble-01.txt), and it creates human
	  readable strings out of binary data.  Affected file
	  lib/silccrypt/silchash.[ch].

	* Print the babble print now in addition of fingerprint as well
	  in Irssi SILC client.  Affected files are
	  irssi/src/fe-common/silc/module-formats.[ch],
	  irssi/src/fe-common/silc/core/client_ops.c.

Sun Nov  4 23:37:28 EET 2001  Pekka Riikonen <priikone@silcnet.org>

	* Fixed a security problem found in SKE.  The initiator's
	  public key too is now added to the HASH hash value creation
	  which is signed by the responder to create the SIGN value.
	  This will prevent anyone in the middle to lie to the responder
	  about the initiator's public key.  If this is done now, the
	  man in the middle will get caught.  Updated the protocol
	  specification.

Sun Nov  4 11:43:53 EET 2001  Pekka Riikonen <priikone@silcnet.org>

	* Better installation directory handling.  Configure module
	  paths and other paths automatically to example_silc* files
	  in doc/.  A patch by toma.

	* Fixed compiler warning from MPI library, and from SILC RNG.
	  A patch by johnny.
